Wrapper for block

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,9 @@
 @import "fonts";
 @import "sprite";
 @import "header";
-@import "flexgrid";
+@import 'grid';
+@import 'all';
+@import 'wrapper-container/wrapper-container';
+
+
+
