--- a/scss/_all.scss
+++ b/scss/_all.scss
@@ -4,10 +4,9 @@ body {
   color: #626262;
 }
 .grey-wrapper {
-  //padding: 1%;
   background-color: #f2f2f2;
   color: #626262;
-  margin: 30px;
+  margin-top: 20px;
 }
 .container .grey-wrapper {
   border: 1px solid #dcdcdc;
