--- a/scss/wrapper-container/_wrapper-container.scss
+++ b/scss/wrapper-container/_wrapper-container.scss
@@ -2,4 +2,9 @@
   background-color: #ffffff;
   border: 1px solid #dcdcdc;
   color: #000000;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 30px;
+
 }
