--- a/scss/_sprite.scss
+++ b/scss/_sprite.scss
@@ -1,10 +1,18 @@
+.position {
+  display: inline-block;
+  vertical-align: middle;
+}
 .sprite {
+  display: inline-block;
+  vertical-align: middle;
   background-image: url(../images/spritesheet.png);
   background-repeat: no-repeat;
   display: block;
 }
 
 .sprite-arrow {
+  display: inline-block;
+  vertical-align: middle;
   width: 15px;
   height: 21px;
   background-position: -5px -5px;
@@ -29,30 +37,40 @@
 }
 
 .sprite-mail {
+  display: inline-block;
+  vertical-align: middle;
   width: 30px;
   height: 26px;
   background-position: -45px -51px;
 }
 
 .sprite-paper_copy {
+  display: inline-block;
+  vertical-align: middle;
   width: 31px;
   height: 29px;
   background-position: -117px -5px;
 }
 
 .sprite-pay {
+  display: inline-block;
+  vertical-align: middle;
   width: 30px;
   height: 25px;
   background-position: -117px -44px;
 }
 
 .sprite-plus {
-  width: 22px;
-  height: 24px;
+  display: inline-block;
+  vertical-align: middle;
+  width: 20px;
+  height: 29px;
   background-position: -85px -79px;
 }
 
 .sprite-upload {
+  display: inline-block;
+  vertical-align: middle;
   width: 29px;
   height: 24px;
   background-position: -117px -79px;
