block for Admin dashboard without bem

--- a/scss/_all.scss
+++ b/scss/_all.scss
@@ -3,12 +3,27 @@ body {
   font-size: 13pt;
   color: #626262;
 }
+
 .grey-wrapper {
   background-color: #f2f2f2;
   color: #626262;
   margin-top: 20px;
 }
+
+.grey-wrapper li {
+  color: #697a83;
+}
+
+.grey-wrapper li p {
+  margin: 0 0 0 0;
+  color: #697a83;
+}
+
+
+
 .container .grey-wrapper {
+  padding-left: 20px;
+  padding-right: 20px;
   border: 1px solid #dcdcdc;
 }
 
