add bem gen-container

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,5 +3,6 @@
 @import 'grid';
 @import 'all';
 @import "header";
-@import 'wrapper-container/wrapper-container';
+@import 'normalize';
+@import 'gen-container/gen-container';
 @import "buttons";
