--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,6 @@
 @import 'all';
 @import "header";
 @import 'normalize';
-@import 'gen-container/gen-container';
+@import 'gen-container';
 @import "buttons";
 @import "inputs";
