--- a/scss/_gen-container.scss
+++ b/scss/_gen-container.scss
@@ -3,20 +3,24 @@
   border: 1px solid #dcdcdc;
   color: #000000;
   padding: 10px 20px 30px 20px;
-
   margin-bottom: 30px;
+  margin-top: 30px;
+  width: 925px;
+  font-size: 13px;
+  font-family: MuseoSans-300, sans-serif;
 }
-.b-gen-container__header-pane {
-}
+
 .b-gen-container__header-heading {
   vertical-align: middle;
   line-height: 25px;
-
+  font-size: 15px;
+  font-family: MuseoSans-700, sans-serif;
 }
 .b-gen-container__header-heading-text {
   margin: 0;
   padding: 0;
-  font-size: 1.1em;
+  font-size: 15px !important;
+  font-family: MuseoSans-700, sans-serif !important;
 }
 .b-gen-container__button-container {
   text-align: right;
@@ -29,7 +33,6 @@
   margin-top: 20px;
   padding: 15px;
 
-
 }
 .b-gen-container__container-pane_link_color {
   color: #697a83;
@@ -37,11 +40,12 @@
 
 .b-gen-container__container-pane_marker-distance {
   color: #697a83;
-  margin: 0 0 0 0;
+  margin: 0 0 0 -7px;
   cursor: pointer;
 }
 .b-gen-container__container-pane_row-distance {
-  margin-bottom: 10px;
+  margin-left: -7px ;
+  margin-bottom: 15px;
 }
 
 
