--- a/scss/_sprite.scss
+++ b/scss/_sprite.scss
@@ -5,6 +5,14 @@
   height: 25px;
 }
 
+.b-primary-menu__content_icon:before {
+  content: '';
+  padding-left: 35px;
+  width: 25px;
+  height: 25px;
+}
+
+
 .b-button__content_icon-arrow:before {
   content: '';
   background-image: url(../images/spritesheet.png);
@@ -51,7 +59,7 @@
   content: '';
   background-image: url(../images/spritesheet.png);
   background-repeat: no-repeat;
-  background-position: -5px -75px;
+  background-position: -5px -80px;
 }
 
 .b-button__content_icon-upload:before {
@@ -72,7 +80,7 @@
   content: '';
   background-image: url(../images/spritesheet.png);
   background-repeat: no-repeat;
-  background-position: -110px -5px;
+  background-position: -110px -10px;
 }
 
 .b-button__content_icon-view:before {
