--- a/scss/_gen-container.scss
+++ b/scss/_gen-container.scss
@@ -1,10 +1,14 @@
+.b-dashboard__content{
+  background-color: rgb(242,242,242);
+  padding-top: 30px;
+}
+
 .b-gen-container {
   background-color: #ffffff;
   border: 1px solid #dcdcdc;
   color: #000000;
   padding: 10px 20px 30px 20px;
   margin-bottom: 30px;
-  margin-top: 30px;
   width: 925px;
   font-size: 13px;
   font-family: MuseoSans-300, sans-serif;
