--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,31 +1,41 @@
 body{
-  width: 1200px;
+  width: 100%;
   margin:0 auto;
 }
 
 .b-header{
-  background-color: rgb(3,21,57);
   height: 90px;
 
 }
+.b-dashboard__header{
+  background-color: #031539;
+}
+
+
+.b-gen-layout-wrapper{
+  margin:0 auto;
+  width: 920px;
+}
 
 .b-logo__text{
-  font-family: MuseoSans-300, sans-serif;
-  font-size: 28px;
-  color:white;
-  vertical-align: middle;
-  line-height: 90px;
   display: inline-block;
   margin-left: 20px;
+  font-family: MuseoSans-300, sans-serif;
+  font-size: 28px;
+  color: #fff;
+
 }
 
 .b-logo__logo{
   display: inline-block;
   margin-left: 150px;
 }
+.b-logo__text{
+  padding-top: 50px;
+}
 
 .b-nav-bar{
-  background-color: rgb(70,70,70);
+  background-color: #464646;
   height: 45px;
 }
 
@@ -36,22 +46,25 @@ body{
 }
 
 .b-primary-menu__item{
-  color:white;
-  line-height: 45px !important;
+  display: inline-block;
+  color: #fff;
+  line-height: 45px;
   text-decoration: none;
   margin-right: 20px;
   &:hover {
-    color:white;
+    color: #fff;
     text-decoration: none;
   }
   &:active {
-    color:white;
+    color: #fff;
     text-decoration: none;
   }
   &:focus {
-    color:white;
+    color: #fff;
     text-decoration: none;
   }
 }
+
+
 
 
