--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -11,10 +11,13 @@ body{
   background-color: #031539;
 }
 
+.b-dashboard__nav-bar{
+  background-color: #464646;
+}
 
 .b-gen-layout-wrapper{
   margin:0 auto;
-  width: 920px;
+  width: 915px;
 }
 
 .b-logo__text{
@@ -23,34 +26,40 @@ body{
   font-family: MuseoSans-300, sans-serif;
   font-size: 28px;
   color: #fff;
-
+  margin-top: 10px;
+  vertical-align: 11px;
 }
 
+.b-header__logo{
+  padding-top: 19px;
+}
 .b-logo__logo{
   display: inline-block;
-  margin-left: 150px;
-}
-.b-logo__text{
-  padding-top: 50px;
+  vertical-align: bottom
 }
 
 .b-nav-bar{
-  background-color: #464646;
   height: 45px;
 }
 
 .b-primary-menu{
   font-family: MuseoSans-700, sans-serif;
   font-size: 13px;
-  margin-left: 150px;
 }
 
 .b-primary-menu__item{
   display: inline-block;
+  position: relative;
   color: #fff;
   line-height: 45px;
   text-decoration: none;
-  margin-right: 20px;
+  margin-right: 22px;
+  padding-left: 30px;
+  &:before{
+    content: '';
+    width: 30px;
+    height: 30px;
+  }
   &:hover {
     color: #fff;
     text-decoration: none;
@@ -64,6 +73,19 @@ body{
     text-decoration: none;
   }
 }
+
+.b-button__content_icon-user_info:before{
+  position: absolute;
+  top: 10px;
+  left: 0;
+}
+.b-button__content_icon-sign_out:before{
+  position: absolute;
+  top: 13px;
+  left: 0;
+
+}
+
 
 
 
