--- a/scss/gen-container/_gen-container.scss
+++ b/scss/gen-container/_gen-container.scss
@@ -5,7 +5,8 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 10px;
-
+  vertical-align: middle;
+  line-height: 56px;
   padding-bottom: 30px;
   margin-bottom: 30px;
   margin-top: 30px;
@@ -13,12 +14,16 @@
 
   ///-------------------------------header-pane
   .b-gen-container__header-pane {
+    vertical-align: middle;
+    line-height: 56px;
   }
   .b-gen-container__header-heading {
-
+    vertical-align: middle;
+    line-height: 56px;
   }
 
   .b-gen-container__button-container {
+    text-align: right;
   }
 
   ///-------------------------------container-pane
