--- a/scss/_sprite.scss
+++ b/scss/_sprite.scss
@@ -1,5 +1,7 @@
 .b-button__content_icon:before {
   content: '';
+  background-image: url(../images/spritesheet.png);
+  background-repeat: no-repeat;
   padding-left: 30px;
   width: 25px;
   height: 25px;
@@ -14,85 +16,50 @@
 
 
 .b-button__content_icon-arrow:before {
-  content: '';
-  background-image: url(../images/spritesheet.png);
-  background-repeat: no-repeat;
   background-position: -5px -10px;
+  padding-left: 25px;
 }
 
 .b-button__content_icon-edit:before {
-  content: '';
-  background-image: url(../images/spritesheet.png);
-  background-repeat: no-repeat;
   background-position: -40px -5px;
 }
 
 .b-button__content_icon-mail:before {
-  content: '';
-  background-image: url(../images/spritesheet.png);
-  background-repeat: no-repeat;
   background-position: -75px -10px;
 }
 
 .b-button__content_icon-paper:before {
-  content: '';
-  background-image: url(../images/spritesheet.png);
-  background-repeat: no-repeat;
   background-position: -5px -44px;
 }
 
 .b-button__content_icon-pay:before {
-  content: '';
-  background-image: url(../images/spritesheet.png);
-  background-repeat: no-repeat;
   background-position: -40px -45px;
 }
 
 .b-button__content_icon-plus:before {
-  content: '';
-  background-image: url(../images/spritesheet.png);
-  background-repeat: no-repeat;
   background-position: -75px -45px;
 }
 
 .b-button__content_icon-sign_out:before {
-  content: '';
-  background-image: url(../images/spritesheet.png);
-  background-repeat: no-repeat;
-  background-position: -5px -79px;
+  background-position: -5px -80px;
 }
 
 .b-button__content_icon-upload:before {
-  content: '';
-  background-image: url(../images/spritesheet.png);
-  background-repeat: no-repeat;
   background-position: -40px -75px;
 }
 
 .b-button__content_icon-upload_w:before {
-  content: '';
-  background-image: url(../images/spritesheet.png);
-  background-repeat: no-repeat;
   background-position: -75px -81px;
 }
 
 .b-button__content_icon-user_info:before {
-  content: '';
-  background-image: url(../images/spritesheet.png);
-  background-repeat: no-repeat;
-  background-position: -110px -8px;
+  background-position: -110px -12px;
 }
 
 .b-button__content_icon-view:before {
-  content: '';
-  background-image: url(../images/spritesheet.png);
-  background-repeat: no-repeat;
   background-position: -110px -40px;
 }
 
 .b-button__content_icon-upload:before {
-  content: '';
-  background-image: url(../images/spritesheet.png);
-  background-repeat: no-repeat;
   background-position: -40px -81px;
 }
