--- a/scss/_inputs.scss
+++ b/scss/_inputs.scss
@@ -2,7 +2,7 @@
   font-family: MuseoSans-700;
   font-size: 13px;
   color: #636363;
-  padding-bottom: 10px;
+  padding-bottom: 9px;
 }
 
 .b-title_radio {
@@ -91,12 +91,12 @@
 
 .b-select_short {
   /*width: 218px;*/
-  width: 225px;
+  width: 217px;
 }
 
 .b-select_arr__short {
   display: inline-block;
-  width: 225px;
+  width: 217px;
 
 }
 
@@ -104,6 +104,7 @@
   display: inline-block;
   height: 40px;
   width: 108px;
+  margin-left: 10px;
 }
 
 input[type=radio] {
