--- a/scss/_gen-container.scss
+++ b/scss/_gen-container.scss
@@ -114,7 +114,30 @@
   float: none;
 }
 
-
+.b-gen-container__main-pane_header {
+  vertical-align: middle;
+  line-height: 25px;
+  font-size: 15px;
+  font-family: MuseoSans-700, sans-serif;
+}
+.b-gen-container__container-pane__citizen-box {
+  padding: 4px 0 10px 20px;
+}
+.b-gen-container__main-pane_button-container {
+  padding-top: 26px;
+  padding-left: 15px;
+}
+.b-button__main-pane__button-container__offset {
+  margin-top: 10px;
+}
+.b-gen-container__main-pane_owner-description__offset {
+  margin-top: 20px;
+  margin-right: 10px;
+}
+.b-gen-container__main-pane_greeting-img{
+  float: left;
+  margin-right: 22px;
+}
 
 
 
