--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -51,7 +51,7 @@
 
 .b-button_apply {
   font-family: MuseoSans-900;
-  //padding: 0 50px 0 50px;
+  /*padding: 0 50px 0 50px;*/
   font-size: 15px;
   height: 44px;
 }
@@ -81,3 +81,20 @@
   vertical-align: middle;
   line-height: 25px;
 }
+
+.b-button_citizen{
+  height: 44px;
+  padding: 0 43px 0 43px;
+  background-color: #8cc248;
+  border: solid 1px #7db23a;
+  &:hover{
+    background-color: lighten(#8cc248, 5%);
+  }
+  &:active {
+    background-color: darken(#7db23a, 5%);
+  }
+  &:focus {
+    outline:none;
+  }
+}
+
