--- a/scss/_new-user.scss
+++ b/scss/_new-user.scss
@@ -11,9 +11,13 @@
 }
 
 .b-gen-container__container-pane-form-padding{
-  padding: 47px 0 41px 59px
+  padding: 47px 0 50px 59px
 }
 
 .row-padding{
   padding-top: 36px;
+}
+
+.row-input-padding{
+  padding-top: 4px;
 }
