--- a/scss/_new-user.scss
+++ b/scss/_new-user.scss
@@ -11,7 +11,7 @@
 }
 
 .b-gen-container__container-pane-form-padding{
-  padding: 47px 0 50px 59px
+  padding: 47px 0 50px 59px;
 }
 
 .row-padding{
@@ -19,5 +19,5 @@
 }
 
 .row-input-padding{
-  padding-top: 4px;
+  padding-top: 2px;
 }
