blue button apply for benefits added

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -29,6 +29,10 @@
   padding: 2px 10px 0 5px;
 }
 
+.b-button_general_apply{
+  padding: 2px 16px 0 5px;
+}
+
 .b-button_arrow {
   padding: 2px 7px 0 0;
 }
