--- a/scss/_inputs.scss
+++ b/scss/_inputs.scss
@@ -4,7 +4,7 @@
   font-family: MuseoSans-700 !important;
   font-size: 13px !important;
   color: #636363;
-  font-weight: normal;
+  font-weight: norm
 }
 
 .b-title_radio {
