--- a/scss/_gen-container.scss
+++ b/scss/_gen-container.scss
@@ -1,6 +1,7 @@
 .b-dashboard__content {
-  background-color: rgb(242, 242, 242);
+  background-color: #f2f2f2;
   padding-top: 30px;
+  padding-bottom: 5px;
 }
 
 .b-gen-container {
@@ -8,9 +9,9 @@
   border: 1px solid #dcdcdc;
   color: #000000;
   padding: 15px 18px 26px 20px;
-  margin-bottom: 30px;
+  margin-bottom: 13px;
   width: 922px;
-  font-size: 13px;
+  font-size: 14px;
   font-family: MuseoSans-300, sans-serif;
 }
 
