--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,7 +1,9 @@
 body{
-  width: 960px;
+  width: 958px;
   margin:0 auto;
-  background-color: #f2f2f2;
+  background-color: #fff;
+  border: 1px solid #dcdcdc;
+  border-top: none;
 }
 
 .b-header{
