--- a/scss/_gen-container.scss
+++ b/scss/_gen-container.scss
@@ -1,7 +1,10 @@
-.b-dashboard__content {
+.b-content-wrapper{
   background-color: #f2f2f2;
+}
+
+.b-dashboard__content {
   padding-top: 30px;
-  padding-bottom: 5px;
+
 }
 
 .b-gen-container {
@@ -9,7 +12,7 @@
   border: 1px solid #dcdcdc;
   color: #000000;
   padding: 15px 18px 26px 20px;
-  margin-bottom: 13px;
+  margin-bottom: 30px;
   width: 922px;
   font-size: 14px;
   font-family: MuseoSans-300, sans-serif;
@@ -201,6 +204,7 @@
   padding: 0;
   font-size: 13px;
   font-family: MuseoSans-700, sans-serif;
+  color: #000;
 }
 
 .b-button_icon{
