--- a/scss/_gen-container.scss
+++ b/scss/_gen-container.scss
@@ -1,10 +1,16 @@
-.b-content-wrapper{
+.l-content-wrapper{
   background-color: #f2f2f2;
+  border: 1px solid lightgrey;
+  border-bottom: none;
+  border-top: none;
 }
 
 .b-dashboard__content {
   padding-top: 30px;
-
+ /* border: 1px solid lightgrey;
+  border-bottom: none;
+  border-top: none;
+*/
 }
 
 .b-gen-container {
