--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -43,4 +43,29 @@
   src: url('../fonts/MuseoSans-900Italic.otf');
   font-style: italic;
 }
+@font-face {
+  font-family: FontAwesome;
+  src: url(../fonts/fontawesome-webfont.eot?v=4.2.0);
+  src: url(../fonts/fontawesome-webfont.eot?#iefix&v=4.2.0) format("embedded-opentype"), url(../fonts/fontawesome-webfont.woff?v=4.2.0) format("woff"), url(../fonts/fontawesome-webfont.ttf?v=4.2.0) format("truetype"), url(../fonts/fontawesome-webfont.svg?v=4.2.0#fontawesomeregular) format("svg");
+  font-weight: 400;
+  font-style: normal
+}
 
+@font-face {
+  font-family: MuseoSans500;
+  src: url(../fonts/MuseoSans_500-webfont.eot);
+  src: url(../fonts/MuseoSans_500-webfont.eot?#iefix) format("embedded-opentype"), url(../fonts/MuseoSans_500-webfont.woff) format("woff"), url(../fonts/MuseoSans_500-webfont.ttf) format("truetype"), url(../fonts/MuseoSans_500-webfont.svg#fontawesomeregular) format("svg");
+  font-weight: 400;
+  font-style: normal; }
+@font-face {
+  font-family: MuseoSans700;
+  src: url(../fonts/museosans_700-webfont.eot);
+  src: url(../fonts/museosans_700-webfont.eot?#iefix) format("embedded-opentype"), url(../fonts/museosans_700-webfont.woff) format("woff"), url(../fonts/museosans_700-webfont.ttf) format("truetype"), url(../fonts/museosans_700-webfont.svg#fontawesomeregular) format("svg");
+  font-weight: 400;
+  font-style: normal; }
+@font-face {
+  font-family: WarnockPro;
+  src: url(../fonts/warnockpro-capt-webfont.eot);
+  src: url(../fonts/warnockpro-capt-webfont.eot?#iefix) format("embedded-opentype"), url(../fonts/warnockpro-capt-webfont.woff) format("woff"), url(../fonts/warnockpro-capt-webfont.ttf) format("truetype"), url(../fonts/warnockpro-capt-webfont.svg#fontawesomeregular) format("svg");
+  font-weight: 400;
+  font-style: normal; }
