--- a/scss/_lp-content.scss
+++ b/scss/_lp-content.scss
@@ -53,7 +53,7 @@
     filter: alpha(Opacity=50);
     opacity: .5
   }
-  :hover .b-individuals-fa {
+  &:hover .b-individuals-fa {
     filter: alpha(enabled=false);
     opacity: 1;
     margin-top: -25px
@@ -80,10 +80,11 @@
   transition: all 0.5s ease;
   position: absolute;
   filter: alpha(Opacity=0);
+  opacity: 0;
   /*opacity: 0;
   display: block;*/
   font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
+  font-size: 16px;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
 
