--- a/scss/_lp-content.scss
+++ b/scss/_lp-content.scss
@@ -18,7 +18,6 @@
 }
 
 .b-item_title {
-  margin-top: 0;
   font-family: MuseoSans700;
   /*font-weight: 500;*/
   color: #333;
@@ -35,7 +34,6 @@
   border-top: 5px solid #0075ac;
   border-radius: 0 0 5px 5px;
   &:after {
-
     content: "";
     position: absolute;
     filter: alpha(Opacity=0);
@@ -47,7 +45,6 @@
     height: 180px;
     z-index: 1;
     transition: all .3s;
-    background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiP…Igd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIgZmlsbD0idXJsKCNncmFkKSIgLz48L3N2Zz4g);
     background-size: 100%;
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3));
   }
@@ -55,7 +52,7 @@
     filter: alpha(Opacity=50);
     opacity: .5
   }
-  &:hover .b-individuals-fa {
+  &:hover .b-item-image_fa {
     filter: alpha(enabled=false);
     opacity: 1;
     margin-top: -25px
@@ -66,7 +63,7 @@
   width: 270px;
 }
 
-.b-individuals-fa {
+.b-item-image_fa {
   width: 50px;
   height: 50px;
   border-radius: 50px;
@@ -89,10 +86,9 @@
   font-size: 16px;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
-
 }
 
-.b-individuals-fa-play{
+.b-item-image_fa_play{
   &:before {
     content: "\f04b"
   }
