landing page header fix

--- a/scss/_lp-header.scss
+++ b/scss/_lp-header.scss
@@ -1,17 +1,10 @@
-.b-header_lp-size{
-  height: 80px;
+.b-logo__logo_landing-size{
+  width: 135px;
+  height: 40px;
 }
-.b-dashboard__nav-bar_lp-color{
-  background-color: #0075AC;
-  height: 53px;
+.b-logo__logo_center {
+  line-height: 49px;
 }
-.b-landing-page__footer{
-  width: 958px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
-
 
 .b-dashboard__content__lp-background{
   background-color: #fff;
