--- a/scss/_lp-header.scss
+++ b/scss/_lp-header.scss
@@ -6,7 +6,7 @@
   line-height: 49px;
 }
 
-.b-dashboard__content__lp-background{
+.b-dashboard__content__landing-background{
   background-color: #fff;
   padding: 30px;
 }
@@ -22,18 +22,18 @@
   float: left;
   text-align: center;
 }
-.b-info{
+.b-landing-info{
   width: 580px;
   float: left;
   padding-right: 20px;
   margin-top: -14px;
 }
-.b-info__title{
+.b-landing-info__title{
   font-family: MuseoSans500,sans-serif;
   font-size: 25px;
   margin:18px 0;
 }
-.b-info__text{
+.b-landing-info__text{
 font-family: MuseoSans500,sans-serif;
   font-size: 14px;
   line-height: 20px;
