--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -39,6 +39,10 @@ html,body{
   margin: 0 -1px 0 -1px;
 }
 
+.b-dashboard__content {
+  padding: 0 0 10px;
+}
+
 .b-dashboard__nav-bar{
   background-color: #464646;
   margin: 0 -1px 0 -1px;
