--- a/scss/_lp-content.scss
+++ b/scss/_lp-content.scss
@@ -18,7 +18,7 @@
 
 .b-list-item__title {
   font-family: MuseoSans700;
-  /*font-weight: 500;*/
+  font-weight: 500;
   color: #333;
   font-size: 16px;
   margin: 0 0 0.75em;
