--- a/scss/_citizen.scss
+++ b/scss/_citizen.scss
@@ -1,3 +1,14 @@
 .b-gen-container__main-pane {
   padding: 16px 0 9px 0;
 }
+
+.b-table-container__notification {
+  background-color: #ffe599;
+  border: solid 1px #dcdcdc;
+  border-bottom: none;
+  width: 100%;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #626262;
+}
