--- a/scss/_sprite.scss
+++ b/scss/_sprite.scss
@@ -52,6 +52,10 @@
   background-position: -75px -81px;
 }
 
+.b-button__content_icon-change_w:before {
+  background-position: -110px -81px;
+}
+
 .b-button__content_icon-user_info:before {
   background-position: -110px -8px;
 }
